// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switchers actions should decrement should create decrement action 1`] = `
Object {
  "type": "DECREMENT_COUNTER",
}
`;

exports[`switchers actions should increment should create increment action 1`] = `
Object {
  "type": "INCREMENT_COUNTER",
}
`;
